--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "preact": "^8.1.0",
+    "preact-compat": "^3.15.0"
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
