--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "firebase": "^3.9.0",
     "preact": "^8.1.0",
-    "preact-compat": "^3.15.0"
+    "preact-compat": "^3.15.0",
+    "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
